Fixing bold shifts layoyt

--- a/public/css/monitor.css
+++ b/public/css/monitor.css
@@ -176,6 +176,10 @@ table {
   resize: none;
 }
 
+.bold {
+  font-weight: bold;
+}
+
 .chat_me {
   font-weight: bold;
 }
